# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: hexlet-check.yml  python-package.yml
gendiff/: gen_loader.py  generate_diff.py
gendiff/formaters/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py  generate_diff.py  json_viev.py  plain.py  stylish.py
tests/: test_generate_diff.py  test_getdiff.py
tests/fixtures/: file_4.yml
